style: separate input fields

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 <div id="filters">
                     <input list="weapons-list" name="weapons" id="weapons" placeholder="Weapon">
                     <datalist id="weapons-list"></datalist>
+                    <div class="sep"></div>
                     <input list="servers-list" name="servers" id="servers" placeholder="Server">
                     <datalist id="servers-list"></datalist>
                 </div>
